push database dump

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node js service for educentral",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/app.ts",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p."
   },
